<resources>
    <string name="app_name">TestNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="search">Search</string>
    <string name="restaurant_list_header">Restaurants available</string>
    <string name="home_header">What are you in \na mood for? 🍽</string>
    <string name="menu_restaurant">Restaurants</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_language">Language</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_faq">FAQs</string>
    <string name="restaurants">restaurants</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="restaurant_imgvw_description">profile pic/logo of the restaurant</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="select_language">Select language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions"><![CDATA[I have read and agreed to the Terms & Condition]]></string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone_number">Phone number</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="all_orders">all orders</string>
    <string name="rating">Rating</string>
    <string name="log_out">Log Out</string>
    <string name="personal_information">Personal Information</string>
    <string name="deliveries">Deliveries</string>
    <string name="home_address">Home address</string>
    <string name="edit">Edit</string>

    <!--This string is used for restaurants list
   -->
    <string-array name="restaurantsName">
        <item >Burger king </item>
        <item >Pizza king</item>
        <item >Sushi king</item>
        <item >BBQ king</item>
        <item >Kapsalon king</item>
        <item >Doner king</item>
        <item >Fries king</item>
        <item >Pasta king</item>
        <item >Fish king</item>
        <item >Chicken king</item>
        <item >Seafood king</item>
        <item >Beef king</item>
    </string-array>
</resources>