<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_outline_storefront_24"
            android:title="@string/menu_restaurant" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/menu_favorites"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/faqs"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/menu_faq"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_baseline_language_24"
            android:title="@string/menu_language" />

    </group>
</menu>