<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="nl.saxion.testnav.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="nl.saxion.testnav.fragments.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_language"
        android:name="nl.saxion.testnav.fragments.language.LanguageFragment"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="nl.saxion.testnav.fragments.favorite.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/nav_faqs"
        android:name="nl.saxion.testnav.fragments.FAQs.FaqsFragment"
        android:label="@string/menu_faq"
        tools:layout="@layout/fragment_faqs" />
</navigation>