<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerProfile">

    <ImageView
        android:id="@+id/customerDrawableImgVw"
        android:layout_width="410dp"
        android:layout_height="170dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/box_drawable" />

    <ImageView
        android:id="@+id/customerInfoImgVw"
        android:layout_width="410dp"
        android:layout_height="400dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@id/customerDrawableImgVw"
        android:src="@drawable/box_drawable" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp">
        <ImageView
            android:id="@+id/customerProfileImgVw"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_baseline_person_24" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/customerNameTxtVw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/cardView"
        android:text="customer's name"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:elevation="1dp"/>

    <RadioButton
        android:id="@+id/customerOnlineRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online"
        android:layout_below="@+id/customerNameTxtVw"
        android:layout_toEndOf="@id/cardView"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:elevation="1dp"/>

    <RadioButton
        android:id="@+id/customerOfflineRadioBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/offline"
        android:layout_below="@+id/customerOnlineRadioBtn"
        android:layout_toEndOf="@id/cardView"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:elevation="1dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customerHomeAddressTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerDrawableImgVw"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customerAddressEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/home_address" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNoTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/customerHomeAddressTxtLayout"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNoEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailSignUpTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneNoTxtLayout"
        android:layout_margin="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailSignUpEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordSignUpTxtLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailSignUpTxtLayout"
        android:layout_margin="15dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordSignUpEditTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        android:layout_below="@id/customerInfoImgVw"
        android:layout_centerHorizontal="true"
        android:textSize="22sp"
        android:textStyle="bold"
        android:backgroundTint="@color/buttonBlue"/>

</RelativeLayout>