<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_centerInParent="true"
        android:elevation="0dp"
        android:src="@drawable/box_drawable" />

    <TextView
        android:id="@+id/logInHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:text="@string/log_in"
        android:textSize="48sp"
        android:textStyle="bold"
        android:textAlignment="center" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/emailEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInHeader"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/passwordEditTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailEditTxt"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_below="@id/passwordEditTxt"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/buttonBlue"
        android:text="@string/log_in"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/signUpQueueTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:layout_below="@+id/logInBtn"
        android:textSize="18sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>