<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/headerTxtVw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:fontFamily="@font/open_sans_extrabold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="8sp"
            android:text="@string/home_header"
            android:textColor="@color/colorAccent"
            android:textSize="15pt"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/AppTheme.SearchBarRadius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"
            android:paddingRight="5dp"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_outline_search_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchBarEditTxt"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:backgroundTint="@color/colorPrimaryLightTint2"
                android:hint="@string/search"
                android:textSize="6pt" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/listVwHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:textSize="8pt"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginLeft="15dp"
            android:text="@string/restaurant_list_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <ListView
                android:id="@+id/restaurantsListVw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>
</RelativeLayout>